--- a/css/style.css
+++ b/css/style.css
@@ -893,6 +893,7 @@ h3 {
   width: 100%;
   top: 0;
   z-index: 9;
+  position: fixed;
 }
 
 @media (max-width: 767px) {
@@ -1377,6 +1378,7 @@ h3 {
 .slider_area {
   position: relative;
   z-index: 0;
+  margin-top: 17vh;
 }
 
 /* line 10, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_slider.scss */
@@ -2646,7 +2648,7 @@ h3 {
 /* line 112, ../../Arafath/CL/Cl November/223. Transportation/HTML/scss/_contact_action.scss */
 .chose_area .about_image:before {
   position: absolute;
-  background: #eb4034;
+  background: #fffbf4;
   right: -25px;
   bottom: -25px;
   content: '';
